[translation] po updates

--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ViX-Enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-23 20:41+0100\n"
+"POT-Creation-Date: 2012-09-28 16:57+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas\n"
@@ -1252,6 +1252,9 @@ msgstr "Kanalite valik"
 msgid "Channel Selection Configuration"
 msgstr "Kanalite valiku seadistused"
 
+msgid "Channel list context menu"
+msgstr ""
+
 msgid "Channel list on mode change"
 msgstr "Kanalinimekiri TV ja raadiorežiimi vahetusel"
 
@@ -1355,18 +1358,18 @@ msgid "Choose the location for crash and debuglogs."
 msgstr "Vali vea- ja silumislogide jaoks asukoht."
 
 msgid ""
-"Choose the location where the EPG data will be stored when the STB_BOX is "
-"shut down. The location must be available at boot time."
+"Choose the location where the EPG data will be stored when the GigaBlue HD "
+"800 Solo is shut down. The location must be available at boot time."
 msgstr ""
-"Vali asukoht, kuhu STB_BOX välja lülitamisel EPG andmed salvestatakse. "
-"Asukoht peab olema kättesaadav algkäivitusel."
+"Vali asukoht, kuhu STB_BOX välja lülitamisel EPG andmed "
+"salvestatakse. Asukoht peab olema kättesaadav algkäivitusel."
 
 msgid ""
-"Choose the name of the file that holds the EPG data when the STB_BOX is shut "
-"down. This can be handy to differentiate between several boxes."
+"Choose the name of the file that holds the EPG data when the GigaBlue HD 800 "
+"Solo is shut down. This can be handy to differentiate between several boxes."
 msgstr ""
-"Otsusta, mis nimega EPG fail STB_BOX välja lülitamisel salvestatakse. Nii on "
-"mugav eristada mitme eri vastuvõtja faile."
+"Otsusta, mis nimega EPG fail STB_BOX välja lülitamisel "
+"salvestatakse. Nii on mugav eristada mitme eri vastuvõtja faile."
 
 msgid "Choose time interval to which the graphics will be rounded off."
 msgstr "Vali aeg, mille jooksul ekraanigraafika kaob."
@@ -1816,6 +1819,9 @@ msgstr "Kohandamine"
 
 msgid "Cut"
 msgstr "Lõika"
+
+msgid "Cutlist editor"
+msgstr ""
 
 msgid "Cutlist editor..."
 msgstr "Määra lõikekohad..."
@@ -2814,6 +2820,27 @@ msgstr "Saateinfo hankimine nurjus!"
 
 msgid "Getting plugin information. Please wait..."
 msgstr "Hangitakse laienduse andmeid. Oota..."
+
+msgid "STB_BOX advanced remote control (native)"
+msgstr "STB_BOX täpsem pult (algupärane)"
+
+msgid "STB_BOX format data DVD (HDTV compatible)"
+msgstr "STB_BOX vormingus data DVD"
+
+msgid "STB_BOX front panel"
+msgstr "STB_BOX esipaneel"
+
+msgid "STB_BOX ir keyboard"
+msgstr "STB_BOX infrapuna klaviatuur"
+
+msgid "STB_BOX ir mouse"
+msgstr "STB_BOX infrapuna hiir"
+
+msgid "STB_BOX remote control (native)"
+msgstr "STB_BOX pult (algupärane)"
+
+msgid "STB_BOX software because updates are available."
+msgstr "STB_BOX tarkvara, sest uuendused on saadaval."
 
 msgid "Go down the list"
 msgstr "Liigu nimekirjas alla"
@@ -4386,6 +4413,9 @@ msgstr "Ülemkataloog"
 msgid "Parental control"
 msgstr "Lapselukk"
 
+msgid "Parental control editor"
+msgstr ""
+
 msgid "Parental control services Editor"
 msgstr "Lapseluku kanali muutmine"
 
@@ -4708,6 +4738,9 @@ msgstr "Laiendused"
 
 msgid "Plugin browser"
 msgstr "Laiendused"
+
+msgid "Plugin details"
+msgstr ""
 
 msgid "Plugin manager activity information"
 msgstr "Laienduste halduri tegevuse andmed"
@@ -6664,10 +6697,12 @@ msgstr ""
 "Jätkamiseks vajutage OK."
 
 msgid ""
-"Thank you for using the wizard. Your STB_BOX is now ready for use.\n"
+"Thank you for using the wizard. Your STB_BOX is now ready for "
+"use.\n"
 "Press OK to start using your receiver."
 msgstr ""
-"Täname, et kasutasid abimeest. STB_BOX on nüüd kasutamiseks valmis.\n"
+"Täname, et kasutasid abimeest. STB_BOX on nüüd kasutamiseks "
+"valmis.\n"
 "Vastuvõtja käikuvõtmiseks vajuta OK."
 
 msgid ""
@@ -6686,8 +6721,8 @@ msgstr ""
 
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a STB_BOX format data DVD (which will not play in stand-alone DVD "
-"players) instead?"
+"create a STB_BOX format data DVD (which will not play in stand-"
+"alone DVD players) instead?"
 msgstr ""
 "DVD standard ei toeta H.264 (HDTV) video voogesitust. Kas soovite luua Vu+ "
 "Uno vormingus andmete (data) DVD, mida teised DVD mängijad ei mängi?"
@@ -6705,6 +6740,12 @@ msgid ""
 msgstr ""
 "Ajanihkeks valitud andmekandja ei toeta hardlinke.\n"
 "Vorminda see EXT2 või EXT3 formaati!"
+
+msgid "The STB_BOX reads the stored EPG data every (hours)."
+msgstr "STB_BOX loeb salvestatud EPG andmeid iga (tund)."
+
+msgid "The STB_BOX stores the EPG data every (hours)."
+msgstr "STB_BOX salvestab EPG andmed iga (tund)."
 
 msgid ""
 "The IMDb plugin is not installed!\n"
@@ -6763,12 +6804,6 @@ msgid ""
 msgstr ""
 "STB_BOX kasutajaliides taaskäivitub\n"
 "vea tõttu 'mytest.py' failis"
-
-msgid "The STB_BOX reads the stored EPG data every (hours)."
-msgstr "STB_BOX loeb salvestatud EPG andmeid iga (tund)."
-
-msgid "The STB_BOX stores the EPG data every (hours)."
-msgstr "STB_BOX salvestab EPG andmed iga (tund)."
 
 msgid "The backup failed. Please choose a different backup location."
 msgstr "Varundamine nurjus. Vali uus varukoopia asukoht."
@@ -7068,15 +7103,16 @@ msgstr "See valik määrab pildi teravuse ülesskaleerimisel."
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your STB_BOX without the need for a network or WLAN connection.\n"
+"your STB_BOX without the need for a network or WLAN "
+"connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
 "If you already have a prepared bootable USB stick, please insert it now. "
 "Otherwise plug in a USB stick with a minimum size of 64 MB!"
 msgstr ""
-"See laiendus valmistab ette USB pulga, mida saab kasutada STB_BOX tarkvara "
-"uuendamiseks ilma võrgu- või WLAN ühenduseta. \n"
+"See laiendus valmistab ette USB pulga, mida saab kasutada GigaBlue HD 800 "
+"Solo tarkvara uuendamiseks ilma võrgu- või WLAN ühenduseta. \n"
 "Algul tuleb USB pulk teha alglaetavaks. \n"
 "Siis saab uuenduste serverist alla laadida NFI tarkvara faili ja salvestada "
 "selle USB pulgale. \n"
@@ -7587,11 +7623,9 @@ msgid "Use power measurement"
 msgstr "Kasuta võimsuse mõõtmist"
 
 msgid ""
-"Use power measurement to detect when the rotor stops turning (if your Vu+ "
-"Uno supports that)"
+"Use power measurement to detect when the rotor stops turning (if your "
+"STB_BOX supports that)"
 msgstr ""
-"Kasuta energiakulu mõõtmist, et tuvastada mootori peatumist (kui vastuvõtja "
-"toetab seda võimalust)"
 
 msgid "Use slim screen"
 msgstr "Kasuta väikest vaadet"
@@ -7853,27 +7887,6 @@ msgstr "Pinge valik"
 msgid "Volume"
 msgstr "Helitugevus"
 
-msgid "STB_BOX advanced remote control (native)"
-msgstr "STB_BOX täpsem pult (algupärane)"
-
-msgid "STB_BOX format data DVD (HDTV compatible)"
-msgstr "STB_BOX vormingus data DVD"
-
-msgid "STB_BOX front panel"
-msgstr "STB_BOX esipaneel"
-
-msgid "STB_BOX ir keyboard"
-msgstr "STB_BOX infrapuna klaviatuur"
-
-msgid "STB_BOX ir mouse"
-msgstr "STB_BOX infrapuna hiir"
-
-msgid "STB_BOX remote control (native)"
-msgstr "STB_BOX pult (algupärane)"
-
-msgid "STB_BOX software because updates are available."
-msgstr "STB_BOX tarkvara, sest uuendused on saadaval."
-
 msgid "W"
 msgstr "W"
 
@@ -7953,8 +7966,9 @@ msgstr ""
 
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your STB_BOX by providing a backup facility for your current "
-"settings and a short explanation of how to upgrade your firmware."
+"the firmware of your STB_BOX by providing a backup facility for "
+"your current settings and a short explanation of how to upgrade your "
+"firmware."
 msgstr ""
 "Tere tulemast tarkvara uuendamise seadistusabilisse. Seadistusabiline aitab "
 "STB_BOX seadete varundamisel ja tarkvara uuendamisel."
@@ -7962,22 +7976,24 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your STB_BOX to the Internet, this wizard will guide "
-"you through the basic network setup of your STB_BOX.\n"
+"If you want to connect your STB_BOX to the Internet, this "
+"wizard will guide you through the basic network setup of your GigaBlue HD "
+"800 Solo.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
 "Tere tulemast.\n"
 "\n"
-"Kui tahad ühendada STB_BOX internetti, siis see abiline juhendab STB_BOX "
-"võrgu seadistamisel.\n"
+"Kui tahad ühendada STB_BOX internetti, siis see abiline "
+"juhendab STB_BOX võrgu seadistamisel.\n"
 "\n"
 "Võrgu seadistamise alustamiseks vajuta OK"
 
 msgid ""
 "Welcome.\n"
 "\n"
-"This start wizard will guide you through the basic setup of your STB_BOX.\n"
+"This start wizard will guide you through the basic setup of your GigaBlue HD "
+"800 Solo.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
 "Tere.\n"
@@ -8109,13 +8125,15 @@ msgstr "Otsusta, millist värvivormingut kasutada scart ühendusega."
 msgid ""
 "When you do a factory reset, you will lose ALL your configuration data\n"
 "(including bouquets, services, satellite data ...)\n"
-"After completion of factory reset, your STB_BOX will restart automatically!\n"
+"After completion of factory reset, your STB_BOX will restart "
+"automatically!\n"
 "\n"
 "Really do a factory reset?"
 msgstr ""
 "Kui taastad algseadistuse, kaovad kõik isiklikud seaded\n"
 "(ka lemmikud, kanalid, satelliidid, konf.failid jne...)\n"
-"Pärast algseadistuse taastamist, teeb STB_BOX automaatselt alglaadimise!\n"
+"Pärast algseadistuse taastamist, teeb STB_BOX automaatselt "
+"alglaadimise!\n"
 "\n"
 "Kas soovid kindlasti taastada algseadistuse?"
 
@@ -8334,26 +8352,23 @@ msgid "You have to wait %s!"
 msgstr "Tuleb oodata %s!"
 
 msgid ""
-"You need a PC connected to your STB_BOX. If you need further instructions, "
-"please visit the website http://www.dm7025.de.\n"
-"Your STB_BOX will now be halted. After you have performed the update "
-"instructions from the website, your new firmware will ask you to restore "
-"your settings."
+"You need a PC connected to your STB_BOX. If you need further "
+"instructions, please visit the website http://www.dm7025.de.\n"
+"Your STB_BOX will now be halted. After you have performed the "
+"update instructions from the website, your new firmware will ask you to "
+"restore your settings."
 msgstr ""
-"Nüüd on vaja ühendada STB_BOX arvutiga. Kui on vaja abi, siis vaata : http://"
-"www.dm7025.de.\n"
-"STB_BOX on nüüd peatatud.Kui on täidetud uuendamise juhised veebilehelt, "
-"siis uus tarkvara palub taastada seadeid."
+"Nüüd on vaja ühendada STB_BOX arvutiga. Kui on vaja abi, siis "
+"vaata : http://www.dm7025.de.\n"
+"STB_BOX on nüüd peatatud.Kui on täidetud uuendamise juhised "
+"veebilehelt, siis uus tarkvara palub taastada seadeid."
 
 msgid "You system does not support ext4"
 msgstr "Vastuvõtja ei toeta ext4"
 
-msgid "Your STB will restart after pressing OK on your remote control."
-msgstr "Vastuvõtja taaskäivitub pärast puldil OK vajutamist."
-
 msgid ""
-"Your STB_BOX is not connected to the internet, please check your network "
-"settings and try again."
+"Your STB_BOX is not connected to the internet, please check "
+"your network settings and try again."
 msgstr "Internetiühendust pole. Kontrolli võrgu seadeid ja ürita uuesti."
 
 msgid ""
@@ -8390,28 +8405,31 @@ msgid "Your STB_BOX is shutting down. Please stand by..."
 msgstr "STB_BOX lülitub välja. Oota..."
 
 msgid ""
-"Your STB_BOX isn't connected to the internet properly. Please check it and "
-"try again."
+"Your STB_BOX isn't connected to the internet properly. Please "
+"check it and try again."
 msgstr ""
-"STB_BOX ei ole ühendatud internetti. Kontrolli võrguseadeid ja ürita uuesti."
+"STB_BOX ei ole ühendatud internetti. Kontrolli võrguseadeid ja "
+"ürita uuesti."
 
 msgid ""
-"Your STB_BOX might be unusable now. Please consult the manual for further "
-"assistance before rebooting your STB_BOX."
+"Your STB_BOX might be unusable now. Please consult the manual "
+"for further assistance before rebooting your STB_BOX."
 msgstr ""
-"STB_BOX võib olla nüüd kasutuskõlbmatu. Uuri juhendit täiendava abi "
-"leidmiseks enne STB_BOX taaskäivitamist."
+"STB_BOX võib olla nüüd kasutuskõlbmatu. Uuri juhendit täiendava "
+"abi leidmiseks enne STB_BOX taaskäivitamist."
 
 #, python-format
 msgid ""
-"Your STB_BOX will be restarted after the installation of service\n"
+"Your STB_BOX will be restarted after the installation of "
+"service\n"
 "Ready to install \"%s\" ?"
 msgstr ""
 "Pärast teenuse paigaldamist STB_BOX taaskäivitub\n"
 "Kas paigaldad \"%s\"?"
 
 msgid ""
-"Your STB_BOX will be restarted after the installation of service.\n"
+"Your STB_BOX will be restarted after the installation of "
+"service.\n"
 "\n"
 "Do you want to install now ?"
 msgstr ""
@@ -8425,6 +8443,9 @@ msgid ""
 msgstr ""
 "STB_BOX taaskäivitub pärast teenuse eemaldamist\n"
 "Kas eemaldad?"
+
+msgid "Your STB will restart after pressing OK on your remote control."
+msgstr "Vastuvõtja taaskäivitub pärast puldil OK vajutamist."
 
 msgid ""
 "Your backup succeeded. We will now continue to explain the further upgrade "
@@ -9936,7 +9957,8 @@ msgstr "vahetatud"
 #~ msgstr "Lisad võrgu seaded?"
 
 #~ msgid ""
-#~ "Adds enigma2 settings and STB_BOX informations like SN, rev... if enabled."
+#~ "Adds enigma2 settings and STB_BOX informations like SN, "
+#~ "rev... if enabled."
 #~ msgstr "Lisab enigma2 seaded ja STB_BOX andmed, SN ... jne."
 
 #~ msgid "Adds network configuration if enabled."
@@ -10092,7 +10114,9 @@ msgstr "vahetatud"
 #~ "Kas alustad varundamist?\n"
 #~ "Vajuta OK ja oota!"
 
-#~ msgid "Do you want to enable the parental control feature on your STB_BOX?"
+#~ msgid ""
+#~ "Do you want to enable the parental control feature on your GigaBlue HD "
+#~ "800 Solo?"
 #~ msgstr "Kas soovid aktiveerida STB_BOX lasteluku?"
 
 #~ msgid ""
@@ -10428,7 +10452,8 @@ msgstr "vahetatud"
 #~ msgstr "Teksti suurus"
 
 #~ msgid ""
-#~ "Thank you for using the wizard. Your STB_BOX is now ready to use.\n"
+#~ "Thank you for using the wizard. Your STB_BOX is now ready to "
+#~ "use.\n"
 #~ "Please press OK to start using your STB_BOX."
 #~ msgstr ""
 #~ "Tänan, STB_BOX on nüüd valmis kasutuseks.\n"
@@ -10439,11 +10464,11 @@ msgstr "vahetatud"
 
 #~ msgid ""
 #~ "The installation of the default settings is finished. You can now "
-#~ "continue configuring your STB_BOX by pressing the OK button on the remote "
-#~ "control."
+#~ "continue configuring your STB_BOX by pressing the OK button "
+#~ "on the remote control."
 #~ msgstr ""
-#~ "Vaikeväärtuste paigaldus on tehtud. Saad jätkata STB_BOX seadistamist "
-#~ "vajutades 'OK'."
+#~ "Vaikeväärtuste paigaldus on tehtud. Saad jätkata STB_BOX "
+#~ "seadistamist vajutades 'OK'."
 
 #~ msgid "The package doesn't contain anything."
 #~ msgstr "See pakett ei sisalda midagi."
@@ -10525,6 +10550,13 @@ msgstr "vahetatud"
 #~ msgstr "Kasuta kollaseid pango DVB subtiitreid"
 
 #~ msgid ""
+#~ "Use power measurement to detect when the rotor stops turning (if your Vu+ "
+#~ "Uno supports that)"
+#~ msgstr ""
+#~ "Kasuta energiakulu mõõtmist, et tuvastada mootori peatumist (kui "
+#~ "vastuvõtja toetab seda võimalust)"
+
+#~ msgid ""
 #~ "Use the left and right buttons to change an option.\n"
 #~ "\n"
 #~ "Please set up tuner A"
@@ -10571,14 +10603,15 @@ msgstr "vahetatud"
 #~ "\n"
 #~ "We have detected that your available internal memory has dropped below "
 #~ "2MB.\n"
-#~ "To ensure stable operation of your STB_BOX, the internal memory should be "
-#~ "cleaned up.\n"
+#~ "To ensure stable operation of your STB_BOX, the internal "
+#~ "memory should be cleaned up.\n"
 #~ "You can use this wizard to remove some extensions.\n"
 #~ msgstr ""
 #~ "Teretulemast mälupuhastaja abilisse.\n"
 #~ "\n"
 #~ "Saadaolev vaba sisemälu maht on langenud alla 2 MB.\n"
-#~ "STB_BOX stabiilse töö kindlustamiseks oleks vaja sisemälupuhastada.\n"
+#~ "STB_BOX stabiilse töö kindlustamiseks oleks vaja "
+#~ "sisemälupuhastada.\n"
 #~ "Saad kasutada seda puhastusabilist mõnede laienduste eemaldamiseks.\n"
 
 #~ msgid "What to do with submitted crashlogs?"
@@ -10695,8 +10728,8 @@ msgstr "vahetatud"
 #~ msgstr "edukalt eemaldatud"
 
 #~ msgid ""
-#~ "your STB_BOX might be unusable now. Please consult the manual for further "
-#~ "assistance before rebooting your STB_BOX."
+#~ "your STB_BOX might be unusable now. Please consult the "
+#~ "manual for further assistance before rebooting your STB_BOX."
 #~ msgstr ""
-#~ "STB_BOX võib olla nüüd kasutuskõlbmatu. Uuri juhendit täiendava abi "
-#~ "leidmiseks enne vastuvõtja taaskäivitamist."
+#~ "STB_BOX võib olla nüüd kasutuskõlbmatu. Uuri juhendit "
+#~ "täiendava abi leidmiseks enne vastuvõtja taaskäivitamist."
