--- a/po/nl.po
+++ b/po/nl.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ViX\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-23 20:41+0100\n"
+"POT-Creation-Date: 2012-09-28 16:57+0100\n"
 "PO-Revision-Date: 2012-09-25 18:15+0100\n"
 "Last-Translator: \n"
 "Language-Team: Andy Blackburn, Rob van der Does\n"
@@ -1257,6 +1257,9 @@ msgstr "Zenderkeuze"
 msgid "Channel Selection Configuration"
 msgstr "Kanaallijst instellingen"
 
+msgid "Channel list context menu"
+msgstr ""
+
 msgid "Channel list on mode change"
 msgstr ""
 
@@ -1362,16 +1365,16 @@ msgid "Choose the location for crash and debuglogs."
 msgstr "Kies waar u crash- en debuglogs wilt opslaan."
 
 msgid ""
-"Choose the location where the EPG data will be stored when the STB_BOX is "
-"shut down. The location must be available at boot time."
+"Choose the location where the EPG data will be stored when the GigaBlue HD "
+"800 Solo is shut down. The location must be available at boot time."
 msgstr ""
-"Hier kunt u instellen waar de EPG data bewaard wordt als uw STB_BOX volledig "
-"is uitgeschakeld. De gewenste locatie moet beschikbaar zijn op het moment "
-"dat uw STB_BOX opstart."
+"Hier kunt u instellen waar de EPG data bewaard wordt als uw GigaBlue HD 800 "
+"Solo volledig is uitgeschakeld. De gewenste locatie moet beschikbaar zijn op "
+"het moment dat uw STB_BOX opstart."
 
 msgid ""
-"Choose the name of the file that holds the EPG data when the STB_BOX is shut "
-"down. This can be handy to differentiate between several boxes."
+"Choose the name of the file that holds the EPG data when the GigaBlue HD 800 "
+"Solo is shut down. This can be handy to differentiate between several boxes."
 msgstr ""
 "Kies de naam van het bestand dat de opgeslagen EPG data bevat. Als u "
 "meerdere ontvangers heeft, kan het handig zijn verschillende namen te "
@@ -1824,6 +1827,9 @@ msgstr "Aanpassen"
 
 msgid "Cut"
 msgstr "Knip"
+
+msgid "Cutlist editor"
+msgstr ""
 
 msgid "Cutlist editor..."
 msgstr "Cutlist editor..."
@@ -2827,6 +2833,27 @@ msgstr "Geen Event Info gevonden!"
 msgid "Getting plugin information. Please wait..."
 msgstr "Gegevens worden opgehaald. Een ogenblikje geduld a.u.b..."
 
+msgid "STB_BOX advanced remote control (native)"
+msgstr "STB_BOX geavanceerde AB"
+
+msgid "STB_BOX format data DVD (HDTV compatible)"
+msgstr "STB_BOX format data DVD (HDTV compatible)"
+
+msgid "STB_BOX front panel"
+msgstr "STB_BOX voorpaneel"
+
+msgid "STB_BOX ir keyboard"
+msgstr "STB_BOX IR-toetsenbord"
+
+msgid "STB_BOX ir mouse"
+msgstr "STB_BOX IR-muis"
+
+msgid "STB_BOX remote control (native)"
+msgstr "STB_BOX AB"
+
+msgid "STB_BOX software because updates are available."
+msgstr "STB_BOX software want er zijn updates beschikbaar."
+
 msgid "Go down the list"
 msgstr "Ga naar beneden in de lijst"
 
@@ -3119,15 +3146,15 @@ msgid ""
 "If set to 'yes' the receiver will use the audio stream that has been used "
 "earlier."
 msgstr ""
-"Indien 'Ja' is gekozen, zal uw STB_BOX de audio-stream laten horen die "
-"eerder werd gekozen."
+"Indien 'Ja' is gekozen, zal uw STB_BOX de audio-stream laten "
+"horen die eerder werd gekozen."
 
 msgid ""
 "If set to 'yes' the receiver will use the subtitles that has been used "
 "earlier."
 msgstr ""
-"Indien 'Ja' is gekozen, zal uw STB_BOX de ondertitels vertonen die eerder "
-"werden gekozen."
+"Indien 'Ja' is gekozen, zal uw STB_BOX de ondertitels vertonen "
+"die eerder werden gekozen."
 
 msgid "If set to 'yes' you can preview channels in the EPG list."
 msgstr ""
@@ -3155,8 +3182,8 @@ msgid ""
 "If the text is too long to be displayed on the front panel, it will be "
 "repeated (number of times):"
 msgstr ""
-"Als de tekst te lang is voor het schermpje van uw STB_BOX, zal het (aantal "
-"keren) worden herhaald:"
+"Als de tekst te lang is voor het schermpje van uw STB_BOX, zal "
+"het (aantal keren) worden herhaald:"
 
 msgid ""
 "If you see this, something is wrong with\n"
@@ -4435,6 +4462,9 @@ msgstr "Bovengelegen map"
 msgid "Parental control"
 msgstr "Kinderslot"
 
+msgid "Parental control editor"
+msgstr ""
+
 msgid "Parental control services Editor"
 msgstr "Kinderslot zender-editor"
 
@@ -4765,6 +4795,9 @@ msgstr "Pluginbrowser"
 
 msgid "Plugin browser"
 msgstr "Applicatiebrowser"
+
+msgid "Plugin details"
+msgstr ""
 
 msgid "Plugin manager activity information"
 msgstr "Pluginmanager activiteitinformatie"
@@ -6022,8 +6055,8 @@ msgstr "Instellingenmenu"
 
 msgid "Setup the interval to check for online updates. (in hours)"
 msgstr ""
-"Hier stelt u het tijdsinterval in waarmee uw STB_BOX naar updates zoekt (in "
-"uren; '0' betekent dat er niet gezocht wordt)."
+"Hier stelt u het tijdsinterval in waarmee uw STB_BOX naar "
+"updates zoekt (in uren; '0' betekent dat er niet gezocht wordt)."
 
 msgid "Setup what a long press on the power button does."
 msgstr "Stel in wat een lange druk op de aan/uit toets moet doen."
@@ -6617,7 +6650,8 @@ msgid "Support at"
 msgstr "Support "
 
 msgid "Swap SNR in db with SNR in percentage"
-msgstr "Wissel tussen SNR in dB en % (als uw STB_BOX dat ondersteunt)."
+msgstr ""
+"Wissel tussen SNR in dB en % (als uw STB_BOX dat ondersteunt)."
 
 msgid "Swap Services"
 msgstr "Zenders omwisselen"
@@ -6749,7 +6783,8 @@ msgstr ""
 "Druk op OK om verder te gaan."
 
 msgid ""
-"Thank you for using the wizard. Your STB_BOX is now ready for use.\n"
+"Thank you for using the wizard. Your STB_BOX is now ready for "
+"use.\n"
 "Press OK to start using your receiver."
 msgstr ""
 
@@ -6769,11 +6804,11 @@ msgstr ""
 
 msgid ""
 "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to "
-"create a STB_BOX format data DVD (which will not play in stand-alone DVD "
-"players) instead?"
+"create a STB_BOX format data DVD (which will not play in stand-"
+"alone DVD players) instead?"
 msgstr ""
-"De DVD standaard ondersteunt geen H.264 (HDTV) video. Wil je een STB_BOX "
-"formaat data DVD maken (deze speelt niet af in een DVD speler) ?"
+"De DVD standaard ondersteunt geen H.264 (HDTV) video. Wil je een GigaBlue HD "
+"800 Solo formaat data DVD maken (deze speelt niet af in een DVD speler) ?"
 
 msgid ""
 "The EPGSearch plugin is not installed!\n"
@@ -6788,6 +6823,12 @@ msgid ""
 msgstr ""
 "Het bestandssyteem van uw Timeshift-Device ondersteunt geen hardlinks.\n"
 "Formatteer die in EXT2 or EXT3!"
+
+msgid "The STB_BOX reads the stored EPG data every (hours)."
+msgstr "Uw STB_BOX leest de opgelsagen EPG-data elke (uur)."
+
+msgid "The STB_BOX stores the EPG data every (hours)."
+msgstr "Uw STB_BOX slaat de EPG-data elke (uur) op."
 
 msgid ""
 "The IMDb plugin is not installed!\n"
@@ -6846,12 +6887,6 @@ msgid ""
 msgstr ""
 "De gebruikersinterface van uw STB_BOX wordt herstart\n"
 "vanwege een fout in mytest.py"
-
-msgid "The STB_BOX reads the stored EPG data every (hours)."
-msgstr "Uw STB_BOX leest de opgelsagen EPG-data elke (uur)."
-
-msgid "The STB_BOX stores the EPG data every (hours)."
-msgstr "Uw STB_BOX slaat de EPG-data elke (uur) op."
 
 msgid "The backup failed. Please choose a different backup location."
 msgstr "Back-up is mislukt. Kies een andere back-up locatie a.u.b."
@@ -7173,7 +7208,8 @@ msgstr ""
 
 msgid ""
 "This plugin creates a USB stick which can be used to update the firmware of "
-"your STB_BOX without the need for a network or WLAN connection.\n"
+"your STB_BOX without the need for a network or WLAN "
+"connection.\n"
 "First, a USB stick needs to be prepared so that it becomes bootable.\n"
 "In the next step, an NFI image file can be downloaded from the update server "
 "and saved on the USB stick.\n"
@@ -7181,7 +7217,8 @@ msgid ""
 "Otherwise plug in a USB stick with a minimum size of 64 MB!"
 msgstr ""
 "Deze plugin creëert een USB-stick die kan worden gebruikt om de software van "
-"uw STB_BOX te updaten zonder dat u een LAN of WLAN verbinding nodig heeft.\n"
+"uw STB_BOX te updaten zonder dat u een LAN of WLAN verbinding "
+"nodig heeft.\n"
 "Eerst moet de stick bootaable gemaakt worden.\n"
 "In de volgende stap kan een BFI-bestand worden gedownload van de update "
 "server en op de stick worden opgeslagen.\n"
@@ -7397,7 +7434,8 @@ msgid ""
 "for 10 seconds.\n"
 "3) Wait for bootup and follow instructions of the wizard."
 msgstr ""
-"Om de firmware van uw STB_BOX te upgraden, voert u de volgende stappen uit:\n"
+"Om de firmware van uw STB_BOX te upgraden, voert u de volgende "
+"stappen uit:\n"
 "1) Schakel uw box uit met de schakelaar en zorg dat er een bootable USB "
 "stick is ingeplugd.\n"
 "2) Schakel de box in en houdt de DOWN-toets op het front paneel 10 seconden "
@@ -7703,11 +7741,9 @@ msgid "Use power measurement"
 msgstr "Meet stroomopname"
 
 msgid ""
-"Use power measurement to detect when the rotor stops turning (if your Vu+ "
-"Uno supports that)"
+"Use power measurement to detect when the rotor stops turning (if your "
+"STB_BOX supports that)"
 msgstr ""
-"Gebruik stroommeting om te detecteren of uw motor gestopt is (als uw STB_BOX "
-"dat ondersteunt)"
 
 msgid "Use slim screen"
 msgstr "Gebruik slim screen"
@@ -7975,27 +8011,6 @@ msgstr "Spanningsmodus"
 msgid "Volume"
 msgstr "Volume"
 
-msgid "STB_BOX advanced remote control (native)"
-msgstr "STB_BOX geavanceerde AB"
-
-msgid "STB_BOX format data DVD (HDTV compatible)"
-msgstr "STB_BOX format data DVD (HDTV compatible)"
-
-msgid "STB_BOX front panel"
-msgstr "STB_BOX voorpaneel"
-
-msgid "STB_BOX ir keyboard"
-msgstr "STB_BOX IR-toetsenbord"
-
-msgid "STB_BOX ir mouse"
-msgstr "STB_BOX IR-muis"
-
-msgid "STB_BOX remote control (native)"
-msgstr "STB_BOX AB"
-
-msgid "STB_BOX software because updates are available."
-msgstr "STB_BOX software want er zijn updates beschikbaar."
-
 msgid "W"
 msgstr "W"
 
@@ -8076,37 +8091,42 @@ msgstr ""
 
 msgid ""
 "Welcome to the Image upgrade wizard. The wizard will assist you in upgrading "
-"the firmware of your STB_BOX by providing a backup facility for your current "
-"settings and a short explanation of how to upgrade your firmware."
+"the firmware of your STB_BOX by providing a backup facility for "
+"your current settings and a short explanation of how to upgrade your "
+"firmware."
 msgstr ""
 "Welkom bij de software update wizard. De wizard biedt u hulp bij het "
-"vernieuwen van de software in uw STB_BOX, het maken van een back-up van uw "
-"huidige instellingen en geeft u een korte uitleg over dit proces."
+"vernieuwen van de software in uw STB_BOX, het maken van een "
+"back-up van uw huidige instellingen en geeft u een korte uitleg over dit "
+"proces."
 
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your STB_BOX to the Internet, this wizard will guide "
-"you through the basic network setup of your STB_BOX.\n"
+"If you want to connect your STB_BOX to the Internet, this "
+"wizard will guide you through the basic network setup of your GigaBlue HD "
+"800 Solo.\n"
 "\n"
 "Press OK to start configuring your network"
 msgstr ""
 "Welkom.\n"
 "\n"
-"Om uw STB_BOX met het internet te verbinden, leidt deze wizard u door de "
-"basisiinstellingen.\n"
+"Om uw STB_BOX met het internet te verbinden, leidt deze wizard "
+"u door de basisiinstellingen.\n"
 "\n"
 "Druk op OK om te beginnen met het configureren van uw netwerk."
 
 msgid ""
 "Welcome.\n"
 "\n"
-"This start wizard will guide you through the basic setup of your STB_BOX.\n"
+"This start wizard will guide you through the basic setup of your GigaBlue HD "
+"800 Solo.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
 "Welkom.\n"
 "\n"
-"Deze start-wizard zal u door de basis instellingen van uw STB_BOX leiden.\n"
+"Deze start-wizard zal u door de basis instellingen van uw GigaBlue HD 800 "
+"Solo leiden.\n"
 "Druk op 'OK' op uw afstandsbediening om naar de volgende stap te gaan."
 
 msgid "Welcome..."
@@ -8211,9 +8231,9 @@ msgid ""
 "any changes and save them. Only set to 'yes' if you're absolutely sure what "
 "you're doing."
 msgstr ""
-"Als uw STB_BOX op een kanaal is afgestemd, wordt normaal gesproken de gehele "
-"transponder gescand op veranderingen. Schakel dit alleen uit, als u zeker "
-"bent van wat u doet. "
+"Als uw STB_BOX op een kanaal is afgestemd, wordt normaal "
+"gesproken de gehele transponder gescand op veranderingen. Schakel dit alleen "
+"uit, als u zeker bent van wat u doet. "
 
 msgid "When using scart connection, choose what color format to use."
 msgstr "Kies het kleursysteem voor gebruik van de scart aansluiting."
@@ -8221,15 +8241,16 @@ msgstr "Kies het kleursysteem voor gebruik van de scart aansluiting."
 msgid ""
 "When you do a factory reset, you will lose ALL your configuration data\n"
 "(including bouquets, services, satellite data ...)\n"
-"After completion of factory reset, your STB_BOX will restart automatically!\n"
+"After completion of factory reset, your STB_BOX will restart "
+"automatically!\n"
 "\n"
 "Really do a factory reset?"
 msgstr ""
 "Wanneer u terug gaat naar de fabrieksinstellingen, verliest u\n"
 "alle gegevens van uw configuratie.\n"
 "(inclusief boeketten, zenders, satellietdata, etc ...)\n"
-"Na voltooiing van de fabrieksinstellingen, zal uw STB_BOX automatisch "
-"herstarten!\n"
+"Na voltooiing van de fabrieksinstellingen, zal uw STB_BOX "
+"automatisch herstarten!\n"
 "\n"
 "Werkelijk uitvoeren?"
 
@@ -8450,27 +8471,24 @@ msgid "You have to wait %s!"
 msgstr "Wacht op %s!"
 
 msgid ""
-"You need a PC connected to your STB_BOX. If you need further instructions, "
-"please visit the website http://www.dm7025.de.\n"
-"Your STB_BOX will now be halted. After you have performed the update "
-"instructions from the website, your new firmware will ask you to restore "
-"your settings."
+"You need a PC connected to your STB_BOX. If you need further "
+"instructions, please visit the website http://www.dm7025.de.\n"
+"Your STB_BOX will now be halted. After you have performed the "
+"update instructions from the website, your new firmware will ask you to "
+"restore your settings."
 msgstr ""
-"U moet uw PC met uw STB_BOX verbinden. Voor meer informatie verwijzen wij u "
-"naar de website http://www.dm7025.de.\n"
-"De STB_BOX word nu uitgeschakeld. Indien u deze aanwijzingen nauwgezet "
-"volgt, zal de STB_BOX u na de update vragen of u uw instellingen terug wilt "
-"plaatsen."
+"U moet uw PC met uw STB_BOX verbinden. Voor meer informatie "
+"verwijzen wij u naar de website http://www.dm7025.de.\n"
+"De STB_BOX word nu uitgeschakeld. Indien u deze aanwijzingen "
+"nauwgezet volgt, zal de STB_BOX u na de update vragen of u uw "
+"instellingen terug wilt plaatsen."
 
 msgid "You system does not support ext4"
 msgstr "Uw systeem ondersteunt geen ext4"
 
-msgid "Your STB will restart after pressing OK on your remote control."
-msgstr "Als u op OK drukt zal uw STB_BOX opnieuw opstarten."
-
 msgid ""
-"Your STB_BOX is not connected to the internet, please check your network "
-"settings and try again."
+"Your STB_BOX is not connected to the internet, please check "
+"your network settings and try again."
 msgstr ""
 "Uw STB_BOX is niet met het internet verbonden. Controleer uw "
 "netwerkinstellingen en probeer het opnieuw."
@@ -8509,33 +8527,36 @@ msgid "Your STB_BOX is shutting down. Please stand by..."
 msgstr "Uw STB_BOX wordt nu afgesloten. Een ogenblik a.u.b..."
 
 msgid ""
-"Your STB_BOX isn't connected to the internet properly. Please check it and "
-"try again."
+"Your STB_BOX isn't connected to the internet properly. Please "
+"check it and try again."
 msgstr ""
-"Uw STB_BOX heeft geen verbinding met het internet kunnen maken. Controleer "
-"instellingen en kabels en probeer opnieuw."
+"Uw STB_BOX heeft geen verbinding met het internet kunnen maken. "
+"Controleer instellingen en kabels en probeer opnieuw."
 
 msgid ""
-"Your STB_BOX might be unusable now. Please consult the manual for further "
-"assistance before rebooting your STB_BOX."
+"Your STB_BOX might be unusable now. Please consult the manual "
+"for further assistance before rebooting your STB_BOX."
 msgstr ""
-"Uw STB_BOX kan nu onbruikbaar zijn geworden. Raadpleeg voordat uw uw STB_BOX "
-"herstart de handleiding."
+"Uw STB_BOX kan nu onbruikbaar zijn geworden. Raadpleeg voordat "
+"uw uw STB_BOX herstart de handleiding."
 
 #, python-format
 msgid ""
-"Your STB_BOX will be restarted after the installation of service\n"
+"Your STB_BOX will be restarted after the installation of "
+"service\n"
 "Ready to install \"%s\" ?"
 msgstr ""
 "Uw STB_BOX zal worden herstart na de installatie\n"
 "Gereed om \"%s\" te installeren?"
 
 msgid ""
-"Your STB_BOX will be restarted after the installation of service.\n"
+"Your STB_BOX will be restarted after the installation of "
+"service.\n"
 "\n"
 "Do you want to install now ?"
 msgstr ""
-"Uw STB_BOX zal na het installeren van de service opnieuw worden gestart\n"
+"Uw STB_BOX zal na het installeren van de service opnieuw worden "
+"gestart\n"
 "\n"
 "Wilt u nu installeren?"
 
@@ -8543,8 +8564,12 @@ msgid ""
 "Your STB_BOX will be restarted after the removal of service\n"
 "Do you want to remove now ?"
 msgstr ""
-"Uw STB_BOX zal na het verwijderen van de service opnieuw worden gestart\n"
+"Uw STB_BOX zal na het verwijderen van de service opnieuw worden "
+"gestart\n"
 "Wilt u nu verwijderen?"
+
+msgid "Your STB will restart after pressing OK on your remote control."
+msgstr "Als u op OK drukt zal uw STB_BOX opnieuw opstarten."
 
 msgid ""
 "Your backup succeeded. We will now continue to explain the further upgrade "
@@ -10061,7 +10086,8 @@ msgstr "zapte"
 #~ msgstr "Netwerkconfiguratie toevoegen?"
 
 #~ msgid ""
-#~ "Adds enigma2 settings and STB_BOX informations like SN, rev... if enabled."
+#~ "Adds enigma2 settings and STB_BOX informations like SN, "
+#~ "rev... if enabled."
 #~ msgstr ""
 #~ "Indien ingeschakeld worden Enigma2 instellingen en STB_BOX "
 #~ "modelinformatie toegevoegd (zoals SN, rev...)."
@@ -10220,7 +10246,9 @@ msgstr "zapte"
 #~ "Wilt u nu een back-up maken?\n"
 #~ "Druk op OK en wacht!"
 
-#~ msgid "Do you want to enable the parental control feature on your STB_BOX?"
+#~ msgid ""
+#~ "Do you want to enable the parental control feature on your GigaBlue HD "
+#~ "800 Solo?"
 #~ msgstr "Wilt u het kinderslot van uw STB_BOX inschakelen?"
 
 #~ msgid ""
@@ -10563,11 +10591,12 @@ msgstr "zapte"
 #~ msgstr "Tekst lettergrootte"
 
 #~ msgid ""
-#~ "Thank you for using the wizard. Your STB_BOX is now ready to use.\n"
+#~ "Thank you for using the wizard. Your STB_BOX is now ready to "
+#~ "use.\n"
 #~ "Please press OK to start using your STB_BOX."
 #~ msgstr ""
-#~ "Dank voor het gebruik van de wizard. Uw STB_BOX is nu gereed voor "
-#~ "gebruik.\n"
+#~ "Dank voor het gebruik van de wizard. Uw STB_BOX is nu gereed "
+#~ "voor gebruik.\n"
 #~ "Druk op OK om uw STB_BOX te gebruiken."
 
 #~ msgid "The installation of the default services lists is finished."
@@ -10575,8 +10604,8 @@ msgstr "zapte"
 
 #~ msgid ""
 #~ "The installation of the default settings is finished. You can now "
-#~ "continue configuring your STB_BOX by pressing the OK button on the remote "
-#~ "control."
+#~ "continue configuring your STB_BOX by pressing the OK button "
+#~ "on the remote control."
 #~ msgstr ""
 #~ "Het instellen van de standaard instellingen is gereed. U kunt nu doorgaan "
 #~ "met de configuratie door op OK te drukken."
@@ -10628,3 +10657,10 @@ msgstr "zapte"
 
 #~ msgid "This option sets up the screen resolution."
 #~ msgstr "Hier stelt u de schermresolutie in."
+
+#~ msgid ""
+#~ "Use power measurement to detect when the rotor stops turning (if your Vu+ "
+#~ "Uno supports that)"
+#~ msgstr ""
+#~ "Gebruik stroommeting om te detecteren of uw motor gestopt is (als uw "
+#~ "STB_BOX dat ondersteunt)"
